--- a/clase2/app/src/main/res/values/strings.xml
+++ b/clase2/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Clase2 ISTEA</string>
+    <string name="app_name">Chequeo IMC</string>
+    <string name="header">Ingrese su peso y altura y vea que tan roto esta!</string>
 
 </resources>
